2008-11-26  Andras Varga

	* library renamed to oppenvir

2008-02-23  Andras Varga

	Summary of changes for omnetpp-4.0 (2006..2008):

	Command line changes:

	* "-f" option is now optional when specifying an inifile on the command
	line (i.e. both "runsim omnetpp.ini" and "runsim -f omnetpp.ini" are
	accepted). Like previously, more than one ini files can be specified.

	Inifile syntax change:

	* configuration handling rewritten...
	* iterators, etc

	Configuration options:

	* output vector configuration: more than one recording intervals
	can now be given, separated by comma

	* output scalar file gets OVERWRITTEN in each run (not appended to it);
	there is an inifile option to the restore old behaviour

	* output-scalar-file-append=

	* experiment-label   "${configname}"
	* measurement-label  "${iterationvars}"
	* replication-label  "#${repetition}, seedset=@"

	* output-vector-file now defaults to: "${resultdir}/${configname}-${runnumber}.vec"
	* output-scalar-file now defaults to: "${resultdir}/${configname}-${runnumber}.sca"

	* **.enable-recording=
	* **.record-event-numbers=
	* **.recording-interval=
	* **.record-scalar=  -- enable/disable recording scalars and/or their individual members (for cStatistic)
	   ^^^ changed, see below:
	      **.record-module-events = <bool>  ==> module-eventlog-recording
	      **.record-event-numbers = <bool>  ==> vector-record-eventnumbers
	      **.enable-recording = <bool>      ==> vector-recording
	      **.recording-interval = <custom>  ==> vector-recording-interval
	      **.max-buffered-samples = <int>   ==> vector-max-buffered-values
	      **.save-as-scalar = <bool>        ==> param-record-as-scalar
	      **.record-scalar = <bool>         ==> scalar-recording

	* indexed outputvector file manager

	* perform-gc was removed, but it can be turned back on per module,
	from C++ code (setPerformFinalGC(true))

	* simtime-scale
	* ned-path, NEDPATH
	* fingerprint
	* seed-set
	* record-eventlog
	* eventlog-file