@@ -46,6 +46,7 @@ class ENVIR_API cFileOutputScalarManager : public cOutputScalarManager
     void init();
     void writeStatisticField(const char *name, long value);
     void writeStatisticField(const char *name, double value);
+    void recordNumericIterationVariable(const char *name, const char *value); // i.e. write *if* numeric
 
   public:
     /** @name Constructors, destructor */
